@@ -62,6 +62,9 @@ dependencies {
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+    // Swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
+
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -72,14 +75,19 @@ dependencies {
     // Database Drivers
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
+    // Netty DNS resolver for MacOS
+    runtimeOnly "io.netty:netty-resolver-dns-native-macos:4.1.112.Final:osx-x86_64"
+    runtimeOnly "io.netty:netty-resolver-dns-native-macos:4.1.112.Final:osx-aarch_64"
 
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.batch:spring-batch-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
     useJUnitPlatform()
     jvmArgs(
             '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
